[package]
name = "fft-anything"
version = "0.1.0"
authors = ["Taylor Hornby <taylor@defuse.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "3.0.1"
hound = "3.4.0"
ctrlc = "3.1.4"
png = "0.16.3"
clap = "2.33.1"


[dependencies.sdl2]
version = "0.34"
features = ["ttf"]